--- a/basic-commands.ipynb
+++ b/basic-commands.ipynb
@@ -302,46 +302,39 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Ownership & Networking"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "* id : Returns the user and the group\n",
+    "* cat /etc/resolv.conf  : Config file that keeps info about DNS\n",
+    "* ping : Connectivity test\n",
+    "* netstat : Shows network connectivity\n",
+    "* dig : DNS troubleshooting\n",
+    "* nmap : Network analysis\n",
+    "* unanme : Displays kernerl version"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Process"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "* ps aux | less : Running Processes\n",
+    "* ps -ef | less : Running Processes"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -356,20 +349,6 @@
    "source": [
     "* sudo yum install bash-completion : Install bash-completion"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
